--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "license": "MIT",
   "repository":{
     "type": "git",
-    "url": ""
+    "url": "https://github.com/redbossrabbit/Calenda"
   },
-  "bugs": "",
-  "homepage": ""
+  "bugs": "https://github.com/redbossrabbit/Calenda/issues",
+  "homepage": "https://calenda-website.web.app/"
 }
