--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "time manager",
     "time management"
   ],
+  "dependencies": {},
   "author": "Ibeh Ubachukwu | @redbossrabbit",
   "license": "MIT",
   "repository":{
