--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "calenda",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A solution for your date management. We've abstracted the complexities of calculating dates for you to use through our easy to use light-weight API. Build your time management apps faster.",
   "main": "/src/calenda.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish": "npm publish"
   },
   "keywords": [
     "calendar",
