--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "/src/calenda.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "publish": "npm publish"
+    "publish": "npm publish",
+    "compile": "tsc src/typescript/calenda"
   },
   "keywords": [
     "calendar",
